  |              would make clients incompatible with previous clients or
  |              proxies will be a accompanied by 'client contest' change.
  `------------- Denotes a client rewrite.

Note: #xxxx refers to bug numbers as viewable on http://bugs.distributed.net/

==========================================================================
Version change log: $Id: CHANGES.txt,v 1.110 2011/04/01 04:12:19 snikkel Exp $
==========================================================================

2.9100
------

2.9110.519  new: amd64: New GO-2c core
            new: amd64: New GO-2d core
            chg: amd64: Core pre-selection for most processors
            fix: x86: OGR core pre-selection for Intel Core iX (#4376)

2.9109.518  fix: all: OGR-NG codebase fixes (#4295)
            fix: all: OGR-NG incorrect node count after full restart
                 of combined stub (#4290)
            imp: all: a kind of stress test for OGR-NG
            imp: cellbe: faster OGR-NG SPU ASM core
            imp: all: log errors to file during tests and buffer update
            fix: x86: possible division by zero in cpuinfo
            imp: x86: CPU detect and core select updates (#4297,#4299,#4301)
            imp: x86: AMD Opteron/Phenom detection (#4326,#4256,#4370)
            fix: all: logging issues with more then 26 crunchers (#4345)
            imp: ppc: recognize more PowerPC processors (#4349)
            imp: ppc: core selection for Power6 series (#4349)
            fix: win64: only 32 processors were used (#4352)
            imp: x86: identification of new i3/i5 chips (#4376)
            imp: stream: new rc5-72 core, expected decreased GUI lag
            imp: stream: HD6850/HD6870 detection (#4358)
            imp: amigaos: PowerPC 460EX detection on OS4
            fix: cellbe: fetched 10000 blocks with default settings

2.9108-517  imp: x86: new OGR-NG 32- and 64-bit cores (#4256)
            imp: x86: identification of new i5/i7 chips (#4271)