@@ -4,7 +4,7 @@
  * Any other distribution or use of this source violates copyright.
 */
 const char *core_ogr_ng_cpp(void) {
-return "@(#)$Id: core_ogr_ng.cpp,v 1.39 2011/04/01 04:12:20 snikkel Exp $"; }
+return "@(#)$Id: core_ogr_ng.cpp,v 1.40 2011/04/14 23:46:44 snikkel Exp $"; }
 
 //#define TRACE
 
@@ -438,6 +438,7 @@ int selcoreGetPreselectedCoreForProject_ogr_ng()
             switch (detected_type)
             {
               case 0x15: cindex = 5; break; /* Intel i3/i5/i7 */
+              case 0x19: cindex = 3; break; /* Intel Sandy Bridge */
               default:   cindex = 6; break;
             }
           }
