@@ -23,7 +23,7 @@ Version bump guide:
 Note: #xxxx refers to bug numbers as viewable on http://bugs.distributed.net/
 
 ==========================================================================
-Version change log: $Id: CHANGES.txt,v 1.110 2011/04/01 04:12:19 snikkel Exp $
+Version change log: $Id: CHANGES.txt,v 1.111 2011/04/14 23:46:43 snikkel Exp $
 ==========================================================================
 
 2.9100
@@ -33,6 +33,7 @@ Version change log: $Id: CHANGES.txt,v 1.110 2011/04/01 04:12:19 snikkel Exp $
             new: amd64: New GO-2d core
             chg: amd64: Core pre-selection for most processors
             fix: x86: OGR core pre-selection for Intel Core iX (#4376)
+            imp: x86/amd64: Intel Sandy Bridge detection/selection
 
 2.9109.518  fix: all: OGR-NG codebase fixes (#4295)
             fix: all: OGR-NG incorrect node count after full restart
